# e-chess

./: AGENTS.md  PLAN.md  README.md  Readme.md  STATUS.md  e-chess.code-workspace  e-chess.scad  platformio.ini
Chess game/: Cargo.toml
Chess game/src/: game.rs  lichess.rs  request.rs
app/: settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/androidTest/java/me/aligator/e_chess/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/me/aligator/e_chess/: App.kt  AppLanguage.kt  AppRoot.kt  MainActivity.kt  Strings.kt
app/app/src/main/java/me/aligator/e_chess/data/: DebugLogStore.kt  SettingsStore.kt
app/app/src/main/java/me/aligator/e_chess/data/model/: GameOption.kt
app/app/src/main/java/me/aligator/e_chess/di/: AppModule.kt
app/app/src/main/java/me/aligator/e_chess/feature/ble/: BleClient.kt  BleDeviceItem.kt  BleGameParser.kt  BleScreen.kt  BleScreenPreviews.kt  BleViewModel.kt
app/app/src/main/java/me/aligator/e_chess/feature/ble/components/: ConnectionStatusCard.kt  DeviceScanner.kt  GameLoader.kt
app/app/src/main/java/me/aligator/e_chess/feature/game/: BoardFen.kt  ChessBoardView.kt  GameScreen.kt  SelectGameScreen.kt
app/app/src/main/java/me/aligator/e_chess/feature/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/app/src/main/java/me/aligator/e_chess/model/: AppError.kt
app/app/src/main/java/me/aligator/e_chess/platform/ble/: BleManager.kt  BoardBleService.kt  BoardControlAction.kt  BoardHttpBridgeAction.kt  BoardOtaAction.kt
app/app/src/main/java/me/aligator/e_chess/repository/: BleRepository.kt  GamesRepository.kt  SettingsRepository.kt
app/app/src/main/java/me/aligator/e_chess/service/: BluetoothService.kt  BluetoothService_ai.kt  ConfigurationStore.kt  DebugLogManager.kt  LichessApi.kt  LichessTokenStore.kt
app/app/src/main/java/me/aligator/e_chess/service/bluetooth/: Ble.kt  BluetoothService.kt  ChessBoardDevice.kt  ChessBoardDeviceAction.kt  HttpBleBridge.kt  HttpBleBridgeAction.kt  OtaAction.kt
app/app/src/main/java/me/aligator/e_chess/ui/: AppTopBar.kt  BleScreen.kt  BleScreenContent.kt  BleViewModel.kt  ConfigScreen.kt  ConfigViewModel.kt  Permissions.kt  UiEvent.kt
app/app/src/main/java/me/aligator/e_chess/ui/components/: ConnectionStatusCard.kt  DeviceScanner.kt  GameLoader.kt  PinEntryDialog.kt
app/app/src/main/java/me/aligator/e_chess/ui/theme/: Color.kt  Theme.kt  Type.kt
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/main/res/values-de/: strings.xml
app/app/src/main/res/values-nb/: strings.xml
app/app/src/main/res/values-no/: strings.xml
app/app/src/test/java/me/aligator/e_chess/: ExampleUnitTest.kt
app/app/src/test/java/me/aligator/e_chess/feature/ble/: BleGameParserTest.kt
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
chess-game/: Cargo.toml  README.md
chess-game/example/: simulator.rs
chess-game/src/: bitboard_extensions.rs  chess_connector.rs  event.rs  game.rs  lib.rs  lichess.rs  main.rs  request.rs  requester.rs
circuit/: esp32-s3-devkit-lipo.tsx  index.tsx  package-lock.json  package.json
cpp-playground/src/: main.cpp
electronics/: README.md
electronics/e-chess/: .gitignore  e-chess.kicad_dru  e-chess.kicad_pcb  e-chess.kicad_pro  e-chess.kicad_sch  ~e-chess.kicad_sch.lck
firmware/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  config.toml  diagram.json  espflash_ota_16mb.toml  espflash_ota_8mb.toml  partitions_16.csv  partitions_8.csv  sdkconfig.defaults  wokwi.toml
firmware/.cargo/: config.toml
firmware/.devcontainer/: devcontainer.json
firmware/assets/: board.js  firmware.js  source.md  styles.css
firmware/docs/: README.md  flow-draft.mermaid
firmware/scripts/: flash.sh
firmware/src/: api.rs  bitboard.rs  bluetooth.rs  board.rs  display.rs  eink_display.rs  event.rs  game.rs  main.rs  main_experiment.rs  main_original.rs  main_testing.rs  request.rs  storage.rs  tic_tac_toe.rs  web.rs  wifi.rs
firmware/src/bluetooth/: mod.rs  types.rs  util.rs
firmware/src/bluetooth/handlers/: bridge.rs  game.rs  mod.rs  ota.rs
firmware/src/experiment/: wlan-main.rs
firmware/src/ttt/: wlan-main.rs
firmware/src/util/: bitboard_serializer.rs  mod.rs
scad/: .gitignore  e-chess.json  e-chess.scad
src/: main.cpp
