[package]
name = "chess-game"
version = "0.1.0"
edition = "2021"

[lib]
name = "chess_game"
path = "src/lib.rs"

[dependencies]
chess = { git = "https://github.com/aligator/chess-rs" }
thiserror = "2.0.9"
colored = { version = "3.0", optional = true }
serde_json = "1.0.140"
reqwest = { version = "0.12.12", features = ["stream"], optional = true }
tokio = { version = "1.43.0", features = ["full"], optional = true }
futures-util = { version = "0.3.31", optional = true }
serde = { version = "1.0.218", features = ["derive"] }
anyhow = "1.0.97"

[features]
default = ["colored-debug", "reqwest"]
colored-debug = ["colored"]
reqwest = ["dep:reqwest", "dep:tokio", "dep:futures-util"]

[[example]]
name = "simulator"
path = "example/simulator.rs"
required-features = ["reqwest"]
