[package]
name = "chess-game"
version = "0.1.0"
edition = "2021"

[lib]
name = "chess_game"
path = "src/lib.rs"

[dependencies]
chess = { git = "https://github.com/aligator/chess-rs" }
thiserror = "2.0.17"
colored = { version = "3.0", optional = true }
serde_json = "1.0.148"
reqwest = { version = "0.13.1", features = ["stream"], optional = true }
tokio = { version = "1.49.0", features = ["full"], optional = true }
futures-util = { version = "0.3.31", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"

[features]
default = ["colored-debug", "reqwest"]
colored-debug = ["colored"]
reqwest = ["dep:reqwest", "dep:tokio", "dep:futures-util"]

[[example]]
name = "simulator"
path = "example/simulator.rs"
required-features = ["reqwest"]
