[package]
name = "e-chess"
version = "0.1.0"
authors = ["aligator <me@aligator.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "e-chess"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
no_board = [] # disables checking for the phyisical board state (e.g. for debugging without a full, real board)

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = { version = "0.4" }
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = { version = "0.45", default-features = false, features = ["rmt-legacy"] }
esp-idf-sys = { version = "0.36", default-features = false, features = [
    "binstart",
] }

anyhow = { version = "1.0.86" }
smart-leds = { version = "0.4.0", default-features = false }
ws2812-esp32-rmt-driver = { version = "*", default-features = false, features = ["smart-leds-trait"], git = "https://github.com/aligator/ws2812-esp32-rmt-driver.git", branch = "fix-flickering-by-using-2-mem-blocks" }
chess = { efault-features = false,  git = "https://github.com/aligator/chess-rs" }
chess-game = { version = "0.1.0", default-features = false, path = "../chess-game" }
heapless = {version = "0.8.0", default-features = false }
urlencoding = {version = "2.1.3", default-features = false }
maud = "0.27.0"

[build-dependencies]
embuild = "0.33"
