[package]
name = "e-chess"
version = "0.1.0"
authors = ["aligator <me@aligator.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "e-chess"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
no_board = [] # disables checking for the phyisical board state (e.g. for debugging without a full, real board)

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = { version = "0.4" }
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = { version = "0.45", default-features = false, features = ["rmt-legacy"] }
esp-idf-sys = { version = "0.36", default-features = false, features = [
    "binstart",
] }

anyhow = { version = "1.0.86" }
smart-leds = { version = "0.4.0", default-features = false }
ws2812-esp32-rmt-driver = { version = "0.12.0", default-features = false, features = ["smart-leds-trait"] }
chess = { git = "https://github.com/aligator/chess-rs", default-features = false }
chess-game = { version = "*", default-features = false, path = "../chess-game" }
heapless = {version = "0.8.0", default-features = false }
urlencoding = {version = "2.1.3", default-features = false }
maud = "0.27.0"
embedded-svc = "0.28.1"
serde_json = {version = "1.0.140", default-features = false}
esp-ota = "0.2.2"

[build-dependencies]
embuild = "0.33"
