[package]
name = "e-chess"
version = "0.1.0"
authors = ["aligator <me@aligator.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "e-chess"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z" # Not sure why but ble is broken with "s"
# TODO: investigate if this is some kind of general bug and also happens in a small example...

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
no_board = [] # disables checking for the phyisical board state (e.g. for debugging without a full, real board)

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = { version = "0.4" }
esp-idf-svc = { version = "0.51", features = ["critical-section"] }
esp-idf-hal = { version = "0.45", default-features = false, features = ["rmt-legacy"] }
esp-idf-sys = { version = "0.36", default-features = false, features = [
    "binstart",
    "std"
] }

anyhow = { version = "1.0.100" }
smart-leds = { version = "0.4.0", default-features = false }
ws2812-esp32-rmt-driver = { version = "0.13.1", default-features = false, features = ["smart-leds-trait"] }
chess = { git = "https://github.com/aligator/chess-rs", default-features = false }
chess-game = { version = "*", default-features = false, path = "../chess-game" }
heapless = {version = "0.9.2", default-features = false }
urlencoding = {version = "2.1.3", default-features = false }
maud = "0.27.0"
embedded-svc = "0.28.1"
serde_json = {version = "1.0.148", features = ["std"]}
esp-ota = "0.2.2"
embedded-hal = "1"
embedded-graphics = { version = "0.8" }
epd-waveshare = { version = "0.6.0", features = ["graphics"]}
debouncr = "0.2.2"
esp32-nimble = "0.11.1"
serde = "1.0.228"

[build-dependencies]
embuild = "0.33"
